<resources>
    <string name="app_name">rave-android</string>
    <string name="accept_card_payments">Accept card payments</string>
    <string name="accept_account_payments">Accept account payments</string>
    <string name="email">Email</string>
    <string name="amount_to_charge_required">Amount to charge (required)</string>
    <string name="public_key">Public key</string>
    <string name="amount_to_charge_defaults_to_50">Amount to charge (defaults to ₦50)</string>
    <string name="txref_required">txRef (required)</string>
    <string name="narration">Narration</string>
    <string name="currency_code_e_g_ngn">Currency code e.g. NGN</string>
    <string name="country_code_e_g_ng">Country code e.g. NG</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="start_payment">START PAYMENT</string>
    <string name="secret_key">Secret Key</string>
    <string name="encryption_key">Encryption key</string>
    <string name="francophone">Accept Franc Mobile Money Payments</string>
    <string name="uk_bank">Accept UK Bank Payments</string>
    <string name="sa_bank">Accept South Africa Bank Payments</string>
    <string name="live">Live</string>
    <string name="bank_transfer">Accept Bank Transfer Payments</string>
    <string name="zambia">Accept ZM Mobile money payments</string>
    <string name="rwanda">Accept RWF Mobile money payments</string>
    <string name="uganda">Accept UG Mobile money payments</string>
    <string name="ghana">Accept GH Mobile money payments</string>
    <string name="staging">Show Staging Label</string>
    <string name="ach">Accept ACH payments</string>
    <string name="should_display_fee">Should Display Fee</string>
    <string name="mpesa">Accept Mpesa payments</string>
    <string name="pre_auth_charge">Pre Auth Charge</string>
    <string name="add_subaccounts">Add subaccounts</string>
    <string name="current_vendor">Your current vendor refs are:</string>
    <string name="add_vendor">ADD VENDOR</string>
    <string name="clear">CLEAR</string>
	<string name="accept_ussd_payments">Accept USSD Payments</string>
    <string name="accept_barter_payments">Accept Barter Payments</string>
    <string name="allow_saved_cards">Allow saved cards</string>
</resources>
